		only cosmetic for logging.
		If the zone info is missing, the zone is guessed from 2d aka
		matching against the system aka's. Then all mail in the .pkt
		file is also assumed to be in that zone if there is no zone
		info in the messages also.
		Guess what, these packets do still exist in Fidonet, it took
		5 years to find them! If you want to check, call 5:5/0

	mbcico:
		The binkp transmitter does now escape the unsafe filename
		characters.
		The binkp receiver now does process escaped filenames.

	mbfido:
		Stone age packet support, see common.a.
		Due to a configuration error in some system using King-FIX 
		v.1.26.Universal mbfido did crash.
		Now it will log this and continue processing ticfiles with the
		risk of sending files back to the owner of that faulty program.
		Added the same check for Seenby lines.

	mbsebbs:
		Increased internal message buffer size to 700 lines.
		Fullscreen editor code cleanup, debug messages removed.


v0.37.3		09-Apr-2003 - 10-May-2003

	upgrade:
		Remove ~/etc/archiver.data, start mbsetup menu 3, leave and
		save. This updates the archiver view contents commands.

	mbsetup:
		The edit archiver has now an edit line for the view archive
		commands.

	mbsebbs:
		Fixed recognition of tar.gz files.
		Added menu function display file.
		Display ascii textfiles now uses the More Y/n/= prompt.
		When a new message is saved in a local area, the mailout
		semafore is not set anymore.

	mbuser:
		Added nopper code during pack.

	mbcico:
		Removed some heavy debug code from ttyio functions to increase
		throughput.
		Standarized raw ifcico protocol logging.
		Some minor changes to the raw ifcico protocol, better error
		checking and a check for buffer overflow.

	mbfido:
		In a scanned netmail destined to our own local UUCP gate the
		useless X-FTN-INTL and X-FTN-TOPT kludges are no longer 
		inserted in the message.

	lang:
		New language prompt number 17.
		Erased language prompts 18..36.


v0.37.2		23-Feb-2003 - 09-Apr-2003
