@@ -21,6 +21,7 @@ v0.37.4		10-May-2003
 		info in the messages also.
 		Guess what, these packets do still exist in Fidonet, it took
 		5 years to find them! If you want to check, call 5:5/0
+		Fixed compiler warning in network code.
 
 	mbcico:
 		The binkp transmitter does now escape the unsafe filename
@@ -35,9 +36,15 @@ v0.37.4		10-May-2003
 		risk of sending files back to the owner of that faulty program.
 		Added the same check for Seenby lines.
 
+	mbtask:
+		Fixed compiler warnings in network code.
+
 	mbsebbs:
 		Increased internal message buffer size to 700 lines.
 		Fullscreen editor code cleanup, debug messages removed.
+
+	unix:
+		Fixed compiler warning.
 
 
 v0.37.3		09-Apr-2003 - 10-May-2003
